force-app/main/default/objects/Store__c/fields/GA4_Property_ID__c.field-meta.xml
<CustomField>
    <fullName>GA4_Property_ID__c</fullName>
    <description>Google Analytics 4 property ID for this store</description>
    <label>GA4 Property ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>