force-app/main/default/objects/Store__c/fields/GTM_Container_ID__c.field-meta.xml
<CustomField>
    <fullName>GTM_Container_ID__c</fullName>
    <description>GTM container numeric ID for this store</description>
    <label>GTM Container ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>