force-app/main/default/objects/Store__c/fields/GTM_Numeric_ID__c.field-meta.xml
<CustomField>
    <fullName>GTM_Numeric_ID__c</fullName>
    <description>GTM account numeric identifier</description>
    <label>GTM Numeric ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>