force-app/main/default/objects/Store__c/fields/Measurement_ID__c.field-meta.xml
<CustomField>
    <fullName>Measurement_ID__c</fullName>
    <description>GA4 measurement ID (G-XXXXXXXXXX)</description>
    <label>Measurement ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>