force-app/main/default/objects/Store__c/fields/Provisioning_Completed__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Completed__c</fullName>
    <label>Provisioning Completed</label>
    <type>DateTime</type>
</CustomField>