force-app/main/default/objects/Store__c/fields/Provisioning_Result__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Result__c</fullName>
    <description>JSON result data from the provisioning process</description>
    <label>Provisioning Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>