force-app/main/default/objects/Store__c/fields/Provisioning_Status__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Status__c</fullName>
    <description>Current status of the store provisioning process</description>
    <label>Provisioning Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>