force-app/main/default/objects/Store__c/fields/Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Type__c</fullName>
    <description>The type of store platform</description>
    <label>Store Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TikTok</fullName>
            </value>
            <value>
                <fullName>Snap</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Meta</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>