force-app/main/default/objects/Store__c/fields/Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Website_URL__c</fullName>
    <description>The store&apos;s website URL</description>
    <label>Website URL</label>
    <type>Url</type>
</CustomField>